[package]
name = "launcher"
version = "0.1.0"
authors = ["Eric Dunaway <36860672+Eric-Dunaway@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }